- Added 	CWebBrowser::SetTheaterMode
- Added 	CWebBrowser::SetTop
- Added 	CWebBrowser::SetVisible
- Added 	CWebBrowser::SetWidth
- Added 	CWebBrowser::Stop
- Modified  CComboBoxEx::GetEditCtrl 	now returns CEdit*
- Modified  CListView::GetEditCtrl      now returns CEdit*
- Modified  CListView::GetHeader		now returns CHeader*
- Modified  CTreeView::GetEditCtrl      now returns CEdit*
- Removed 	CString::b_str
- Removed 	CString(LPCTSTR pszText);
- Removed 	CString::operator += (LPCTSTR szText);

Incompatibilities with previous versions
----------------------------------------


Version 7.2
===========

New Features and Enhancements
-----------------------------
* Added CString class
   The CString class is intended to provide much of the same functionality
   as the CString class provided with MFC/ATL.
* Added CMenu
	The CMenu class is intended to provide much of the same functionality
    as the CMenu class provided with MFC. The library now standardises on
    using pointers to CMenu, instead of HMENU.	
* Added CFile
	This class provides a convenient wrapper for functions dealing with files.
* Added Idle processing.
	The Idle processing is used by the Win32++ library for some internal 
	processing. It is also available for use by users, and is used in much the
	same way as OnIdle processing in MFC.
* Enhanced the CDC class, and added CWindowDC, CClientDC, CMemDC, CPaintDC
   and CMetaFileDC. The creation of the various different types of CDCs has
   been simplified, and the CDC functions now use CDC pointers instead of
   HDCs. These changes improve the compatibility between Win32++ and MFC.
* Enhanced the various GDI object classes, namely CBitmap, CBrush, CFont, 
   CPalette, CPen and CRgn, and added CGDIObject. The library now standardises
   on using pointers to theses classes instead of raw GDI handles (like HPEN).
   These changes improve the compatibility between Win32++ and MFC.

Changes in detail
-----------------
- Added CustomControl sample