@@ -75,6 +75,7 @@ Changes in detail
 - Modified  CListView::GetEditCtrl      now returns CEdit*
 - Modified  CListView::GetHeader		now returns CHeader*
 - Modified  CTreeView::GetEditCtrl      now returns CEdit*
+- Modified  CWnd::SetWindowPos			now uses CWnd* for first arguement
 - Removed 	CString::b_str
 - Removed 	CString(LPCTSTR pszText);
 - Removed 	CString::operator += (LPCTSTR szText);
